--- a/docker/docker-compose-ray-cuda.yaml
+++ b/docker/docker-compose-ray-cuda.yaml
@@ -1,5 +1,4 @@
-version: "3.9"
-
+name: ray_cluster
 services:
   # ────────────────────────────────────────────────────────────
   # MinIO object‑store (checkpoints, datasets, models)
@@ -8,9 +7,6 @@ services:
   # Creates the bucket `ray` if it does not yet exist
   minio-create-bucket:
     image: minio/mc
-    depends_on:
-      minio:
-        condition: service_healthy
     entrypoint: >
       /bin/sh -c "
       mc alias set minio http://129.114.25.240:9001 your-access-key your-secret-key &&
@@ -32,8 +28,7 @@ services:
       mkdir -p /tmp/ray &&
       chown -R root:root /tmp/ray &&
       ray metrics launch-prometheus &&
-      ray start --head --port=6379 --dashboard-host=0.0.0.0 \
-                --block --metrics-export-port=8080"
+      ray start --head --port=6379 --dashboard-host=0.0.0.0 --block --metrics-export-port=8080"
     ports:
       - "6379:6379"
       - "8265:8265"
@@ -91,8 +86,7 @@ services:
   ray-worker-1:
     image: rayproject/ray:2.42.1-gpu
     container_name: ray-worker-0
-    command: ["ray", "start", "--address=ray-head:6379",
-              "--num-cpus=32", "--num-gpus=1", "--block"]
+    command: ["ray", "start", "--address=ray-head:6379", "--num-cpus=32", "--num-gpus=1", "--block"]
     deploy:
       resources:
         reservations:
@@ -113,8 +107,7 @@ services:
   ray-worker-2:
     image: rayproject/ray:2.42.1-gpu
     container_name: ray-worker-1
-    command: ["ray", "start", "--address=ray-head:6379",
-              "--num-cpus=32", "--num-gpus=1", "--block"]
+    command: ["ray", "start", "--address=ray-head:6379","--num-cpus=32", "--num-gpus=1", "--block"]
     deploy:
       resources:
         reservations:
