--- a/Serving/fastapi_onnx/Dockerfile.txt
+++ b/Serving/fastapi_onnx/Dockerfile.txt
@@ -1,6 +1,20 @@
-FROM python:3.11-slim
+# Use NVIDIA CUDA image if you need GPU access; else use python slim
+FROM nvidia/cuda:12.4.0-runtime-ubuntu24.04
+
+# Install Python and dependencies
+RUN apt-get update && \
+    apt-get install -y python3-pip && \
+    rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-COPY app.py .
-CMD ["uvicorn","app:app","--host","0.0.0.0","--port","8000"]
+
+# Copy inference code and model into the image
+COPY app/requirements.txt .
+RUN pip3 install --no-cache-dir -r requirements.txt
+
+# Copy your FastAPI app
+COPY app/main.py .
+
+# Expose port and launch Uvicorn
+EXPOSE 8000
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
