--- a/Serving/fastapi_onnx/Dockerfile
+++ b/Serving/fastapi_onnx/Dockerfile
@@ -1,5 +1,14 @@
 # Use NVIDIA CUDA image if you need GPU access; else use python slim
-FROM nvidia/cuda:12.4.0-runtime-ubuntu24.04
+#FROM nvidia/cuda:12.4.0-runtime-ubuntu20.04
+FROM nvidia/cuda:12.4.0-cudnn8-runtime-ubuntu20.04
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+      libcublas-12-4 \
+      libcublas-dev \
+      libcudnn8 \
+      libcudnn8-dev && \
+    rm -rf /var/lib/apt/lists/*
 
 # Install Python and dependencies
 RUN apt-get update && \
@@ -8,6 +17,8 @@ RUN apt-get update && \
 
 WORKDIR /app
 
+COPY llama2-legal-onnx/ /app/model
+#COPY model/model.onnx /app/model
 # Copy inference code and model into the image
 COPY app/requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
