--- a/Serving/Docker/Dockerfile.fastapi
+++ b/Serving/Docker/Dockerfile.fastapi
@@ -17,11 +17,14 @@ RUN apt-get update && \
 
 WORKDIR /app
 
-COPY llama2-legal-onnx/ /app/model
-#COPY model/model.onnx /app/model
+# COPY llama2-legal-onnx/ /app/model
+# COPY model/model.onnx /app/model
 # Copy inference code and model into the image
 COPY app/requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
+
+ENV MLFLOW_TRACKING_URI=""
+ENV MODEL_URI=""
 
 # Copy your FastAPI app
 COPY app/main.py .
