--- a/Serving/Docker/docker-compose.yaml
+++ b/Serving/Docker/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     container_name: llm-api
     environment:
       # Where your model is stored in MLflow (edit to your run or alias)
-      MODEL_URI: "s3://mlflow-artifacts"
+      MODEL_URI: "runs:/d83c3a778ab94075962dd67f724af964/model"
       # Where the tracking / registry server lives
       MLFLOW_TRACKING_URI: "http://129.114.25.240:8000"
       # Optional: S3/MinIO creds if artifacts are remote
