--- a/Serving/Docker/Dockerfile.fastapi
+++ b/Serving/Docker/Dockerfile.fastapi
@@ -1,11 +1,12 @@
 # Use NVIDIA CUDA image if you need GPU access; else use python slim
 #FROM nvidia/cuda:12.4.0-runtime-ubuntu20.04
-FROM nvidia/cuda:12.4.0-cudnn8-runtime-ubuntu20.04
+#FROM nvidia/cuda:12.4.0-cudnn8-runtime-ubuntu20.04
+#FROM nvidia/cuda:12.4.1-cudnn-runtime-ubuntu20.04
+FROM nvidia/cuda:12.4.1-runtime-ubuntu22.04
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
       libcublas-12-4 \
-      libcublas-dev \
       libcudnn8 \
       libcudnn8-dev && \
     rm -rf /var/lib/apt/lists/*
@@ -22,6 +23,7 @@ WORKDIR app/
 # Copy inference code and model into the image
 COPY fastapi_onnx/app/requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
+RUN pip3 install mlflow
 
 ENV MLFLOW_TRACKING_URI=""
 ENV MODEL_URI=""
