--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Install & test
         run: |
           python -m pip install --upgrade pip
+          pip install pytest
           pip install -r app_flask/requirements.txt
           pytest --maxfail=1 --disable-warnings -q
 
