--- a/Serving/Docker/docker-compose-cpu.yaml
+++ b/Serving/Docker/docker-compose-cpu.yaml
@@ -15,6 +15,7 @@ services:
       AWS_ACCESS_KEY_ID:   "your-access-key"
       AWS_SECRET_ACCESS_KEY: "your-secret-key"
       MLFLOW_S3_ENDPOINT_URL: "http://129.114.25.240:9000"
+      MLFLOW_ENABLE_ARTIFACTS_SERVER: "false"
     ports:
       - "7000:7000"                     # host → container
     restart: unless-stopped
